# Omega

./: .gitignore  CMakeLists.txt  README.md
include/: *  Entity.hpp  ft2build.h
include/Buttons/: AttackButton.hpp  HealButton.hpp  SceneButton.hpp
include/Core/: Button.hpp  Game.hpp  GameObject.hpp  Scene.hpp  Sprite.hpp  Utilities.hpp
src/: Entity.cpp  Main.cpp  main.cpp
src/Buttons/: AttackButton.cpp  HealButton.cpp  SceneButton.cpp
src/Core/: Button.cpp  Game.cpp  GameObject.cpp  Scene.cpp  Sprite.cpp  Utilities.cpp
